--- a/application.yaml
+++ b/application.yaml
@@ -13,7 +13,7 @@ Resources:
           - Effect: Allow
             Principal:
               Service:
-                - ec2.amazonaws.com
+                - AWSIoT
             Action:
               - 'sts:AssumeRole'
       Path: /
